@@ -75,7 +75,7 @@ gradleTest {
     dependsOn sanityCheck
     systemProperties = [:]
 // tag::applyplugin2[]
-    versions '4.0'
+    versions '4.0', '4.1'
     versions '3.5', '3.4.1'
     versions '3.3', '3.2.1', '3.1', '3.0'
     versions '2.14.1'
@@ -121,7 +121,7 @@ if(GradleVersion.current() >= GradleVersion.version('2.13')) {
     additionalGradleTestSet 'nonLegacyOnly' // <1>
 
     nonLegacyOnlyGradleTest { // <2>
-        versions '4.0'
+        versions '4.0', '4.1'
 	versions '3.5', '3.4.1', '3.3'
         versions '3.2', '3.1', '3.0' // <3>
         versions '2.14.1'
